Moved overflow-x hidden rule to .autocomplete-open definition to avoid triggering iPhone scrolling bug on feed card.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -333,22 +333,20 @@ a {
 .autocomplete {
   z-index: 4;
   position: absolute;
-  margin: auto;
   height: 0px;
   background: white;
   text-align: left;
   overflow-y: scroll;
-  /*overflow-x: hidden;*/
   -webkit-transition: height 300ms ease-out;
 }
 .autocomplete div
 {
   padding: 5px;
-  /*overflow-x: hidden;*/
 }
 .autocomplete-open
 {
   height: 150px !important;
+  overflow-x: hidden;
 }
 .hardware-acceleration, .translate-z
 {
